--- a/configuration/config_example.json
+++ b/configuration/config_example.json
@@ -1,6 +1,7 @@
 {
-  "seats": [12, 8, 3, 4, 7],
-  "district_sizes": [120, 80, 30, 40, 70],
-  "q": 5,
+  "seats": [2, 1, 3],
+  "district_sizes": [10, 11, 12],
+  "q": 3,
+  "avg_deg": 8,
   "sample_size": 5
 }
