--- a/configuration/config_files/config_example.json
+++ b/configuration/config_files/config_example.json
@@ -1,6 +1,7 @@
 {
   "seats": [2, 1, 3],
   "district_sizes": [10, 11, 12],
+  "district_coords": [[0.0, 0.0], [1.0, 0.0], [0.0, 1.0]],
   "q": 3,
   "avg_deg": 8,
   "sample_size": 5
