--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install python-igraph numpy matplotlib scipy geppy
+        python -m pip install python-igraph numpy matplotlib scipy geopy
     - name: Run tests
       run: |
         python -m unittest discover -p '*_tests.py'
