--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -15,7 +15,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.6"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - name: Check out repo 
