--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
+        # add python 3.6 when the problem with installing it on ubuntu-latest gets fixed
 
     steps:
     - name: Check out repo 
